css/list.css
body {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

#stats_creation {
    display: flex;
}

#addMenu {
    position: fixed;
    z-index: 100;
    top: 15%;
    left: 20%;
    width: 60%;
    height: 70%;
    background-color: rgb(177, 177, 177);
    padding: 10px;
}

#addMenuHeader {
    display: flex;
}

#episodeButton {
    background-color: green;
}
#movieButton {
    background-color: blue;
}
#specialButton {
    background-color: red;
}

